# CppUniversityProject

./: CMakeLists.txt  main  main.cpp
Models/: .Battle.h.swp  .ClassesOfHeroes.h.swp  .Hero.cpp.swp  .Hero.h.swp  Battle.cpp  Battle.h  BossBattle.cpp  BossBattle.h  ClassesOfHeroes.cpp  ClassesOfHeroes.h  DefaultMobs.cpp  DefaultMobs.h  DungeonBoss.cpp  DungeonBoss.h  EpicMobs.cpp  EpicMobs.h  Hero.cpp  Hero.h  TypesOfDamage.cpp  TypesOfDamage.h
Models/ClassesOfHeroes/: Archer.h  ClassesOfHeroes.cpp  Mage.h  Warrior.h
Models/DefaultMobs/: DefaultMobs.cpp  Kobold.h  Murloc.h
Models/EpicMobs/: Minotaur.h
Views/: .Home.cpp.swp  Home.cpp
